--- a/cadastroDeClientes/index.html
+++ b/cadastroDeClientes/index.html
@@ -17,35 +17,32 @@
     <br>
     <hr>
     <div id="p"><p><h2>Novo Cliente</h2></p></div>
-    <form action=" ">
-        <fieldset id="cadastro">
-            <div class="txt">
-                <label for="nome">Nome</label>
-                <input type="text" name="nome" class="botaoTxt" required> 
-            </div>
-            <br>
-            <div class="txt">
-                <label for="numer">Número</label>
-                <input type="number" name="numero" class="botaoTxt" required> 
-            </div>
-            <br>
-            <div class="txt">
-                <label for="doc">CPF ou CNPJ</label>
-                <input type="text" name="doc" class="botaoTxt" required>
-            </div>
-            <br>
-            <div class="txt">
-                <label for="email">E-mail</label>
-                <input type="email" name="email" class="botaoTxt" required>
-            </div>
-            <br>
-            <div class="txt">
-                <label for="endereco">Endeço</label>
-                <input type="text" name="endereco" class="botaoTxt" required>
-            </div>
-            <br>
-            <input type="submit" id="submit">
-        </fieldset>     
-    </form>
+    <fieldset id="cadastro">
+        <div class="txt">
+            <label for="nome">Nome</label>
+            <input type="text" name="nome" class="botaoTxt" required> 
+        </div>
+        <br>
+        <div class="txt">
+            <label for="numer">Número</label>
+            <input type="number" name="numero" class="botaoTxt" required> 
+        </div>
+        <br>
+        <div class="txt">
+            <label for="doc">CPF ou CNPJ</label>
+            <input type="text" name="doc" class="botaoTxt" required>
+        </div>
+        <br>
+        <div class="txt">
+            <label for="email">E-mail</label>
+            <input type="email" name="email" class="botaoTxt" required>
+        </div>
+        <br>
+        <div class="txt">
+            <label for="endereco">Endeço</label>
+            <input type="text" name="endereco" class="botaoTxt" required>
+        </div>zzz
+        <input type="submit" id="submit" required>
+    </fieldset>     
 </body>
 </html>
