--- a/cadastroDeClientes/index.html
+++ b/cadastroDeClientes/index.html
@@ -41,7 +41,8 @@
         <div class="txt">
             <label for="endereco">Endeço</label>
             <input type="text" name="endereco" class="botaoTxt" required>
-        </div>zzz
+        </div>
+        <br>
         <input type="submit" id="submit" required>
     </fieldset>     
 </body>
